base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:12
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: local-storage
      volumes:
        - name: local-storage
          persistentVolumeClaim:
            claimName: postgresql-pvc
