base/sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:community
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: nfs-storage              
            - mountPath: /opt/sonarqube/logs
              
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: sonarqube-pvc
