base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-sonarqube
  labels:
    app: postgresql
spec:
  ports:
    - port: 5432
  selector:
    app: postgresql
  type: ClusterIP
