base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  labels:
    app: sonarqube
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
  type: LoadBalancer
