base/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
  #loadBalancerIP: <METALLB_IP>
